Bug 61187 - CRASH when click 'Add' in EXTENSIONS Manager to open LibO File Dialog
Summary: CRASH when click 'Add' in EXTENSIONS Manager to open LibO File Dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-02-20 20:39 UTC by Rainer Bielefeld Retired
Modified: 2013-02-22 08:22 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
backtrace of crash when clicking Add in Extension Manager (10.67 KB, text/plain)
2013-02-21 11:36 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2013-02-20 20:39:23 UTC
Steps how to reproduce with parallel Dev-installation of  "Version 4.1.0.0.alpha0+ (Build ID: 2b9394f0c009b385756a0c5d75e3c1cd412f723) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-02-14_00:13:52" ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with LODev/4 Masters User Profile:

1. Launch LibO
2. From LibO Start Center: menu 'Tools -> Extension Manager -> <Add...>
   > Crash!

Same with MinGW Build 4.1.0.0.alpha0+ (Build ID: 134374473ea481410f389cab162a52fab62c5c4)
TinderBox: Win-x86@7-MinGW, Branch:master, Time: 2013-02-17_23:52:45

I think this started 10 days ago or so.
Comment 1 Julien Nabet 2013-02-20 21:44:51 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.
Comment 2 Jorendc 2013-02-20 21:46:33 UTC
I can't reproduce this either on Linux Mint 14 x64, master build yesterday. Therefore it's indeed a Windows-only problem.
Comment 3 Julien Nabet 2013-02-20 21:48:13 UTC
Roman/Alex: would one of you have some time to give a try on Mac?
Comment 4 manj_k 2013-02-20 22:04:36 UTC
Not reproducible (on WinXP 32b) with 
Version 4.1.0.0.alpha0+ (Build ID: dd15748d4a1a5bae3aea85ea086035e7e45aec4)
TinderBox: Win-x86@6, Branch:master, Time: 2013-02-19_23:46:56.

Adding an extension works fine for me.
Comment 5 Alex Thurgood 2013-02-20 22:16:09 UTC
Pretty certain it doesn't crash on Mac either, but will check.

Alex
Comment 6 Rainer Bielefeld Retired 2013-02-21 05:47:25 UTC
For me still [Reproducible] with parallel Dev-installation of  "4.1.0.0.alpha0+ (Build ID: 0a967d4cb4468785ed3d302104642353b93232f) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-02-21_00:36:59" ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with LODev/4 Masters User Profile 

64Bit only? Something else? I will test on 2 other PC today.
Comment 7 Rainer Bielefeld Retired 2013-02-21 09:40:30 UTC
The problem for me only appears with menu 'Tools -> Options -> LibO -> General - Open/Save - Use LibO Dialog' is checked
Comment 8 Rainer Bielefeld Retired 2013-02-21 10:04:46 UTC
With condition in Comment 7 crash is  [Reproducible] on a differen PC with parallel Dev-installation of  "Version 4.1.0.0.alpha0+ (Build ID: 0a967d4cb4468785ed3d302104642353b93232f) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-02-21_00:36:59" ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with newly created LODev/4 Masters User Profile 

Befor NEW I would like to have checked by someone else whether Win-only or also with other OS

Only "major" because it's still possible to add extensions
Comment 9 Alex Thurgood 2013-02-21 11:29:25 UTC
Hi Rainer,

Nice catch ! I can confirm on my Linux 32bit build from master :

1) Enable LO dialogs in Tools > Option > General > Display 
2) Tools > Extension Manager
3) Click on "Add" button
4) Crash

Error message in console :
terminate called after throwing an instance of 'com::sun::star::uno::DeploymentException'



Alex
Comment 10 Alex Thurgood 2013-02-21 11:36:50 UTC
Created attachment 75246 [details]
backtrace of crash when clicking Add in Extension Manager
Comment 11 Alex Thurgood 2013-02-21 11:38:44 UTC
No idea who deals with the VCL stuff.
Comment 12 Julien Nabet 2013-02-21 12:00:36 UTC
Alex: thank you for the bt!

Noel: by taking a look to git history of desktop/source/deployment/gui/dp_gui_dialog2.cxx (present in the bt), might it be one for you?
Comment 13 Jean-Baptiste Faure 2013-02-21 18:52:57 UTC
(In reply to comment #9)
> Hi Rainer,
> 
> Nice catch ! I can confirm on my Linux 32bit build from master :
> 
Same crash for me with my 64bits build from master under Ubuntu 12.04. 
(Build ID: d4b904f7d15be8460dbff4cf6c8d500aea5a4fa)

Best regards. JBF
Comment 14 Not Assigned 2013-02-22 08:17:43 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c04c95958030bd4872fbbc0b3d4bc996fb041488

fix for fdo#61187



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.