fix for fdo#61187

... "CRASH when click 'Add' in EXTENSIONS Manager to open LibO File Dialog"

This one must have been broken for a long while, because it didn't
even implement XFilePicker before.

Change-Id: I7c5d4e4c3ba14f4c6dffa91a25a745e6ca51ec37